--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCSpring Helix Variable/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+FCSpring+Helix+Variable&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_FCSpring_Helix_Variable.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FCSpring Helix Variable (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--high" title="Macro FCSpring Helix Variable (91% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_FCSpring_Helix_Variable.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCSpring Helix Variable (49% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -390,13 +390,9 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 </p>
 <h2><span class="mw-headline" id="Version">Version</span></h2>
 <p>11/07/2024 version 01.19 <b>"import WebGui"</b> gel&ouml;scht und durch <b>"import webbrowser"</b> ersetzt und Filter f&uuml;r <b>OS Linux Mint</b> angepasst
-</p>
-<div class="mw-translate-fuzzy">
-<p>2023/09/01 Version 0.18c <b>FreeCAD.activeDocument().recompute(None,True,True)</b> hinzugef&uuml;gt, <i>Texte en italique</i> "Fehler" behoben durch <b>Syres</b> danke
+</p><p>2023/09/01 Version 0.18c <b>FreeCAD.activeDocument().recompute(None,True,True)</b> hinzugef&uuml;gt, <i>Text in italics</i> "Fehler" behoben durch <b>Syres</b> danke
 <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?p=703568#p703568">How to draw polygonal spirals in Freecad?</a>
-</p>
-</div>
-<p>2023/09/01 Version 0.18b den Code korrigiert (angepasst):
+</p><p>2023/09/01 Version 0.18b den Code korrigiert (angepasst):
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="bp">self</span><span class="o">.</span><span class="n">PB_Adapt_Radius</span><span class="o">.</span><span class="n">setStyleSheet</span><span class="p">(</span><span class="s2">"background-color: QPalette.Base"</span><span class="p">)</span>
 </pre></div>
@@ -500,35 +496,35 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118053746
+Cached time: 20260118053808
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.221 seconds
-Real time usage: 0.269 seconds
-Preprocessor visited node count: 946/1000000
+CPU time usage: 0.190 seconds
+Real time usage: 0.221 seconds
+Preprocessor visited node count: 945/1000000
 Post&#8208;expand include size: 24597/2097152 bytes
 Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 28753/5000000 bytes
+Unstrip post&#8208;expand size: 28757/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  114.200      1 -total
-  3.34%    3.815      6 Template:Code
-  3.14%    3.590      1 Template:Macro/de
-  2.97%    3.397      1 Template:Codeextralink
-  2.95%    3.367     12 Template:SpinBox
-  2.36%    2.695      8 Template:CheckBox
-  2.00%    2.284      2 Template:RadioButton
-  1.88%    2.148      1 Template:KEY
-  1.83%    2.089     25 Template:Button
-  1.66%    1.900      1 Template:Caption
+100.00%   86.897      1 -total
+  4.39%    3.813      6 Template:Code
+  3.01%    2.614     12 Template:SpinBox
+  2.89%    2.511      1 Template:Macro/de
+  2.63%    2.286      8 Template:CheckBox
+  2.49%    2.160      1 Template:Codeextralink
+  2.16%    1.879     25 Template:Button
+  1.74%    1.509      1 Template:Caption
+  1.62%    1.405      2 Template:RadioButton
+  1.61%    1.397     14 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053746 and revision id 1739778. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260118053808 and revision id 1739780. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
