--- a/wiki/Macro_FCInfo.html
+++ b/wiki/Macro_FCInfo.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCInfo</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCInfo&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Information (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FCInfo (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="it/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Info in scheda (54% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -7,7 +7,7 @@
 <li><a href="sv/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (9% translated)" lang="sv" dir="ltr">svenska</a></li>
 <li><a href="cs/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Makro FCInfo (8% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="ru/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--low" title="Macro FCInfo (12% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
-<li><a href="ko/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="FCInfo &#47588;&#53356;&#47196; (82% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ko/Macro_FCInfo.html" class="mw-pt-progress mw-pt-progress--high" title="FCInfo &#47588;&#53356;&#47196; (81% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -181,7 +181,7 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </p>
 <ul><li><b>Inclination of the object</b> can be displayed in:
 <ul><li>decimal degree, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174.831872611&deg;</span></li>
-<li>degree minute seconde, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174&deg; 49' 54.741401<i></i></span></li>
+<li>degree minute second, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174&deg; 49' 54.741401<i></i></span></li>
 <li>radian, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">3.05139181449 rad</span></li>
 <li>grade, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">194.257636235 gon</span></li>
 <li>percent, ex: 30&deg; = <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">57.74%</span></li></ul></li>
@@ -359,7 +359,7 @@ If you want to convert your old FCInfo spreadsheet&nbsp;: Open it in FCInfo and 
 </p>
 <h4><span class="mw-headline" id="Angle_degrees_:">Angle degrees&nbsp;:</span></h4>
 <ol><li><b>decimal degree</b>, ex: 174.831872611&deg;</li>
-<li>degree minute seconde, ex: 174&deg; 49' 54.741401''</li>
+<li>degree minute second, ex: 174&deg; 49' 54.741401''</li>
 <li>radian, ex: 3.05139181449 rad</li>
 <li>grade, ex: 194.257636235 gon</li>
 <li>percent ex: 30&deg; = 57.74%</li></ol>
@@ -659,12 +659,12 @@ Here another post of <a rel="nofollow" class="external text" href="https://forum
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210015
+Cached time: 20260118054030
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.204 seconds
-Real time usage: 0.306 seconds
+CPU time usage: 0.208 seconds
+Real time usage: 0.220 seconds
 Preprocessor visited node count: 1630/1000000
 Post&#8208;expand include size: 40661/2097152 bytes
 Template argument size: 5117/2097152 bytes
@@ -675,19 +675,19 @@ Unstrip post&#8208;expand size: 15705/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   79.411      1 -total
-  8.61%    6.841      8 Template:RadioButton
-  8.48%    6.732     10 Template:Code
-  6.27%    4.976     44 Template:LineEdit
-  5.57%    4.427      1 Template:Macro
-  5.47%    4.347     10 Template:CheckBox
-  5.35%    4.249     19 Template:True
-  5.24%    4.161      5 Template:SpinBox
-  5.03%    3.994      1 Template:CodeDownload
-  4.65%    3.691      4 Template:ComboBox
+100.00%   44.356      1 -total
+  8.81%    3.906     10 Template:Code
+  5.33%    2.365      8 Template:RadioButton
+  4.52%    2.003      1 Template:Macro
+  4.13%    1.833     10 Template:CheckBox
+  4.03%    1.786     44 Template:LineEdit
+  3.40%    1.506     25 Template:Button
+  3.24%    1.436     19 Template:True
+  2.86%    1.268      1 Template:Codeextralink
+  2.84%    1.260      5 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260111210015 and revision id 1730718. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:10892-0!canonical and timestamp 20260118054048 and revision id 1739781. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
