--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -189,24 +189,21 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_6:_Neigung">Abschnitt 6: Neigung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Inclination_00.png&amp;filetimestamp=20221021104232&amp;.html" class="mw-file-description" title="FCInfo Neigung"><img alt="FCInfo Neigung" src="../File/Macro_FCInfo_Inclination_00.png" decoding="async" width="397" height="242" class="mw-file-element" data-file-width="397" data-file-height="242"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><b>Inclination of the object</b> can be displayed in:
-<ul><li>decimal degree, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174.831872611&deg;</span></li>
-<li>degree minute seconde, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174&deg; 49' 54.741401<i></i></span></li>
-<li>radian, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">3.05139181449 rad</span></li>
-<li>grade, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">194.257636235 gon</span></li>
-<li>percent, ex: 30&deg; = <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">57.74%</span></li></ul></li>
-<li><b>Inclinations in planes XY, YZ, ZX</b> and their coordinates</li>
-<li><b>Direction object</b>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, -10.0)</span> give the direction of object. The calculate is&nbsp;: coord_1 - coord_2 = direction (or reverse)
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Direction</span> this button create a line in direction of the object.</li></ul></li>
-<li><b>ValueAt(0)</b>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 10.0)</span> returns the 3D vector corresponding to a parameter value.
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">ValueAt(0)</span> this button create a line in ValueAt direction of the object.</li></ul></li>
-<li><b>NormalAt(0,0)</b>, <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 1.0)</span> returns the 3D vector corresponding to a parameter value.
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">NormalAt(0,0)</span> this button create a line in NormalAt direction of the object.</li></ul></li></ul>
-<p><i>(you can checked to <code>false</code> the variable <b>switch_setVisible_GBox_006_Inclination</b> for hidden the Box)</i>
-</p>
-</div>
-<p><span id="Sector_7:_Surface_and_Volume"></span>
+<ul><li><b>Inclination of the object</b> (Neigung des Objekts) kann angezeigt werden in:
+<ul><li>Dezimalgrad, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174.831872611&deg;</span></li>
+<li>Grad Minute Sekunde, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">174&deg; 49' 54.741401<i></i></span></li>
+<li>Radian, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">3.05139181449 rad</span></li>
+<li>Neugrad, ex: <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">194.257636235 gon</span></li>
+<li>Prozent, ex: 30&deg; = <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">57.74%</span></li></ul></li>
+<li><b>Inclinations in planes XY, YZ, ZX</b> (Neigung in den XY-, YZ-, ZX-Ebenen ) und deren Koordinaten</li>
+<li><b>Direction object</b> (Richtungsobjekt), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, -10.0)</span> Die Richtung des Objekts angeben. Die Berechnung lautet: coord_1 - coord_2 = Richtung (oder umgekehrt)
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Direction</span> (Richtung) Diese Schaltfl&auml;che erstellt eine Linie in Richtung des Objekts.</li></ul></li>
+<li><b>ValueAt(0)</b> (Wert an (0)), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 10.0)</span> Gibt den 3D-Vektor zur&uuml;ck, der einem Parameterwert entspricht.
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">ValueAt(0)</span> Diese Schaltfl&auml;che erstellt eine Linie in Richtung ValueAt des Objekts.</li></ul></li>
+<li><b>NormalAt(0,0)</b> (Normale an (0,0)), <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Vector (0.0, 0.0, 1.0)</span> Gibt den 3D-Vektor zur&uuml;ck, der einem Parameterwert entspricht.
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">NormalAt(0,0)</span> Diese Schaltfl&auml;che erstellt eine Linie in NormalAt-Richtung des Objekts.</li></ul></li></ul>
+<p><i>(Die Variable <b>switch_setVisible_GBox_006_Inclination</b> kann auf <code>false</code> gesetzt werden, um den Rahmen auszublenden.)</i>
+</p><p><span id="Sector_7:_Surface_and_Volume"></span>
 </p>
 <h3><span id="Abschnitt_7:_Oberfl.C3.A4che_und_Volumen"></span><span class="mw-headline" id="Abschnitt_7:_Oberfl&auml;che_und_Volumen">Abschnitt 7: Oberfl&auml;che und Volumen</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Surface_and_Volume_00.png&amp;filetimestamp=20221021104109&amp;.html" class="mw-file-description" title="FCInfo Oberfl&auml;che und Volumen"><img alt="FCInfo Oberfl&auml;che und Volumen" src="../File/Macro_FCInfo_Surface_and_Volume_00.png" decoding="async" width="397" height="326" class="mw-file-element" data-file-width="397" data-file-height="326"></a></span>
@@ -709,13 +706,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117141339
+Cached time: 20260118054542
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.292 seconds
-Real time usage: 0.666 seconds
-Preprocessor visited node count: 1537/1000000
+CPU time usage: 0.228 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 1536/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
@@ -725,19 +722,19 @@ Unstrip post&#8208;expand size: 15827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  369.500      1 -total
- 71.06%  262.577     10 Template:Code
-  2.02%    7.448     44 Template:LineEdit
-  1.67%    6.158     30 Template:False
-  1.65%    6.090      8 Template:RadioButton
-  1.61%    5.959      4 Template:ComboBox
-  1.45%    5.369     10 Template:CheckBox
-  1.31%    4.825     25 Template:Button
-  1.24%    4.581      5 Template:SpinBox
-  1.13%    4.168      1 Template:Macro/de
+100.00%  104.281      1 -total
+  6.75%    7.035      1 Template:CodeDownload
+  6.31%    6.575     10 Template:CheckBox
+  5.80%    6.049     10 Template:Code
+  5.79%    6.042      1 Template:Codeextralink
+  4.66%    4.857      8 Template:RadioButton
+  4.62%    4.821      1 Template:Macro/de
+  4.51%    4.706     44 Template:LineEdit
+  3.64%    3.795      1 Template:Caption
+  3.20%    3.342      3 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260117141339 and revision id 1739531. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118054541 and revision id 1739783. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
