--- a/wiki/de/Macro_FCInfo.html
+++ b/wiki/de/Macro_FCInfo.html
@@ -309,16 +309,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 <h3><span class="mw-headline" id="Abschnitt_12:_Tabelle">Abschnitt 12: Tabelle</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_Disabled_module_00.png&amp;filetimestamp=20221021103851&amp;.html" class="mw-file-description" title="FCInfo ausgeschaltet"><img alt="FCInfo ausgeschaltet" src="../File/Macro_FCInfo_Disabled_module_00.png" decoding="async" width="396" height="118" class="mw-file-element" data-file-width="396" data-file-height="118"></a></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Disabled module<span></span></span> CheckBox for search or not all details of the object. If it is not checked, only the principal value is displayed.</li>
-<li>Vertexes and details of the shape (compt_Edge), (compt_Faces), (compt_Vector of the Face)</li>
-<li>Max 200 lines in the table, if there are more than 200 lines it appears <b>(!+ 200)</b> and the number of lines</li>
-<li>If the object is complicated with many objects, the time is long and the search is repeated with every mouse click. The write function in the spreadSheet included, decreases the display time for this it is disabled by default</li>
-<li>Full details can save be the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span> button in a file in CSV format and can be viewed the file in spreadsheet with the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Read</span> or by an external spreadsheet as <a rel="nofollow" class="external text" href="https://www.libreoffice.org/">LibreOffice</a> <a rel="nofollow" class="external text" href="http://openoffice.apache.org/downloads.html">OpenOffice</a> or other<br></li></ul>
-<p><i>(you can checked to <code>false</code> the variable <b>switch_setVisible_GBox_012_SpreadSheet</b> for hidden the Box)</i>
-</p>
-</div>
-<p><span id="Sector_13:_SpreadSheet_creation"></span>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Disabled module<span></span></span> Kontrollk&auml;stchen f&uuml;r die Suche oder nicht alle Details des Objekts. Wenn sie nicht aktiviert ist, wird nur der Hauptwert angezeigt.</li>
+<li>Eckpunkte und Details der Form (compt_Edge), (compt_Faces), (compt_Vector of the Face)</li>
+<li>Maximal 200 Zeilen in der Tabelle, bei mehr als 200 Zeilen erscheint <b>(!+ 200)</b> und die Anzahl der Zeilen</li>
+<li>Wenn das Objekt aus vielen Objekten besteht, dauert die Suche lange und wird bei jedem Mausklick wiederholt. Die Schreibfunktion in der enthaltenen Tabellenkalkulation verringert die Anzeigezeit, daher ist sie standardm&auml;&szlig;ig deaktiviert.</li>
+<li>Alle Details k&ouml;nnen &uuml;ber die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Save</span> (Speichern) in einer Datei im CSV-Format gespeichert und mit der Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Read</span> (Lesen) in einer Tabellenkalkulation oder mit einem externen Tabellenkalkulationsprogramm wie <a rel="nofollow" class="external text" href="https://www.libreoffice.org/">LibreOffice</a> <a rel="nofollow" class="external text" href="http://openoffice.apache.org/downloads.html">OpenOffice</a> oder anderen Programmen angezeigt werden.</li></ul>
+<p><i>(Die Variable <b>switch_setVisible_GBox_012_SpreadSheet</b> kann auf <code>false</code> gesetzt werden, um den Rahmen auszublenden.)</i>
+</p><p><span id="Sector_13:_SpreadSheet_creation"></span>
 </p>
 <h3><span class="mw-headline" id="Abschnitt_13:_Tabellenerstellung">Abschnitt 13: Tabellenerstellung</span></h3>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCInfo_SpreedSheet_00.png&amp;filetimestamp=20230901201427&amp;.html" class="mw-file-description" title="FCInfo Tabelle"><img alt="FCInfo Tabelle" src="../File/Macro_FCInfo_SpreedSheet_00.png" decoding="async" width="465" height="159" class="mw-file-element" data-file-width="465" data-file-height="159"></a></span>
@@ -703,13 +700,13 @@ Hier noch ein Beitrag von <a rel="nofollow" class="external text" href="https://
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118054901
+Cached time: 20260118055116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.256 seconds
-Real time usage: 0.342 seconds
-Preprocessor visited node count: 1535/1000000
+CPU time usage: 0.176 seconds
+Real time usage: 0.235 seconds
+Preprocessor visited node count: 1534/1000000
 Post&#8208;expand include size: 40879/2097152 bytes
 Template argument size: 5252/2097152 bytes
 Highest expansion depth: 6/100
@@ -719,19 +716,19 @@ Unstrip post&#8208;expand size: 15827/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   76.292      1 -total
-  8.29%    6.328     10 Template:CheckBox
-  6.40%    4.883     10 Template:Code
-  6.24%    4.760      8 Template:RadioButton
-  5.35%    4.081      5 Template:SpinBox
-  4.62%    3.524      1 Template:Codeextralink
-  4.33%    3.302      1 Template:Macro/de
-  4.17%    3.184     44 Template:LineEdit
-  3.88%    2.960      1 Template:CodeDownload
-  3.25%    2.481      4 Template:ComboBox
+100.00%   58.013      1 -total
+  7.30%    4.236      8 Template:RadioButton
+  6.85%    3.977     44 Template:LineEdit
+  6.76%    3.922     10 Template:Code
+  5.12%    2.973      1 Template:Macro/de
+  4.68%    2.713     10 Template:CheckBox
+  3.99%    2.317      1 Template:CodeDownload
+  3.97%    2.305      5 Template:SpinBox
+  3.59%    2.085      4 Template:ComboBox
+  3.57%    2.069     30 Template:False
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118054900 and revision id 1739785. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:35781-0!canonical and timestamp 20260118055116 and revision id 1739787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
